--- a/Entrega_1/style.css
+++ b/Entrega_1/style.css
@@ -2,7 +2,9 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url(images/IMG_4141.JPG);
+    /* imagen sacada de https://www.magicpattern.design/tools/css-backgrounds*/
+    background-image: url(images/css-pattern-by-magicpattern.png);
+    background-size: 600px;
     background-repeat: repeat;
     overflow-x: hidden;
 }
