--- a/Entrega_4/public/css/styles.css
+++ b/Entrega_4/public/css/styles.css
@@ -1,3 +1,7 @@
+body {
+    font-family: Arial, sans-serif; /* replace with your desired font */
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -5,7 +9,20 @@
     height: 100vh;
 }
 
-
+.carrito-item{
+    padding: 10px;
+    border-bottom: 1px solid #000000;
+}
+.producto-nombre-carrito{
+    font-weight: bold;
+}
+.producto-max-carrito {
+    font-weight: bold;
+    color: red;
+    text-align: center;
+    display: block;
+    padding-top: 10px;
+}
 header {
     background-color: #447cc4;
     color: white;
