--- a/Entrega_12/public/css/styles.css
+++ b/Entrega_12/public/css/styles.css
@@ -111,3 +111,13 @@ p {
 .carritoProducto:last-child {
     border-bottom: none;
 }
+
+#offlineMessage {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    background-color: red;
+    color: white;
+    padding: 10px;
+    display: none;
+}
